<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.netease.nim</groupId>
	<artifactId>camellia</artifactId>
	<version>1.3.0-SNAPSHOT</version>
	<name>camellia base module</name>
	<url>https://github.com/netease-im/camellia</url>
	<packaging>pom</packaging>
	<description>camellia framework</description>
	<modules>
		<module>camellia-admin</module>
		<module>camellia-core</module>
		<module>camellia-codec</module>
		<module>camellia-cache</module>
		<module>camellia-feign-client</module>
		<module>camellia-hbase-client</module>
		<module>camellia-redis-base</module>
		<module>camellia-redis-client</module>
		<module>camellia-redis-proxy</module>
		<module>camellia-id-gen</module>
		<module>camellia-mq-isolation</module>
		<module>camellia-delay-queue</module>
		<module>camellia-tools</module>
		<module>camellia-zk</module>
		<module>camellia-hot-key</module>
		<module>camellia-http-console</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>
		<java8.version>1.8</java8.version>

		<spring.boot.version>2.0.9.RELEASE</spring.boot.version>
		<spring.cloud.version>Finchley.RELEASE</spring.cloud.version>
		<spring.boot3.version>2.7.18</spring.boot3.version>
		<spring.cloud3.version>2021.0.8</spring.cloud3.version>

		<server.spring.boot.version>3.3.3</server.spring.boot.version>
		<server.spring.cloud.version>2023.0.3</server.spring.cloud.version>

		<spring-cloud-openfeign.version>2.0.0.RELEASE</spring-cloud-openfeign.version>
		<spring-boot-maven-plugin.version>2.0.6.RELEASE</spring-boot-maven-plugin.version>
		<spring-web.version>5.0.10.RELEASE</spring-web.version>
		<spring-cloud-starter-config.version>2.0.0.M9</spring-cloud-starter-config.version>
		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
		<maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
		<maven-source-plugin.version>3.1.0</maven-source-plugin.version>
		<maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>
		<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
		<maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
		<maven-gpg-plugin.version>1.5</maven-gpg-plugin.version>
		<fastjson.version>1.2.83</fastjson.version>
		<cglib.version>3.3.0</cglib.version>
		<openFeign9.version>9.4.0</openFeign9.version>
		<openFeign11.version>11.8</openFeign11.version>
		<okhttp.version>3.14.9</okhttp.version>
		<okhttp4.version>4.11.0</okhttp4.version>
		<slf4j.version>1.7.7</slf4j.version>
		<netty.version>4.1.114.Final</netty.version>
		<jctools.version>4.0.1</jctools.version>
		<netty-incubator-transport-native-io_uring.version>0.0.25.Final</netty-incubator-transport-native-io_uring.version>
		<netty-incubator-codec-native-quic.version>0.0.67.Final</netty-incubator-codec-native-quic.version>
		<jedis.version>2.9.3</jedis.version>
		<jedis3.version>3.6.3</jedis3.version>
		<concurrentlinkedhashmap.version>1.4.2</concurrentlinkedhashmap.version>
		<swagger.version>2.2.2</swagger.version>
		<hbase-client.version>2.2.6</hbase-client.version>
		<curator.version>2.12.0</curator.version>
		<msgpack.version>0.9.0</msgpack.version>
		<kafka-clients.version>1.1.1</kafka-clients.version>
		<nacos.version>2.0.3</nacos.version>
		<lz4-java.version>1.8.0</lz4-java.version>
		<mybatis-spring-boot-starter.version>1.3.2</mybatis-spring-boot-starter.version>
		<mysql-connector-java.version>5.1.30</mysql-connector-java.version>
		<caffeine.version>2.9.3</caffeine.version>
		<jetcd.version>0.7.7</jetcd.version>
		<bouncycastle.version>1.70</bouncycastle.version>
	</properties>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-release-plugin</artifactId>
						<version>2.5.3</version>
						<configuration>
							<autoVersionSubmodules>true</autoVersionSubmodules>
							<useReleaseProfile>false</useReleaseProfile>
							<releaseProfiles>release</releaseProfiles>
							<goals>deploy</goals>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>${maven-source-plugin.version}</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${maven-javadoc-plugin.version}</version>
						<configuration>
							<docencoding>UTF-8</docencoding>
							<encoding>UTF-8</encoding>
							<charset>UTF-8</charset>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven-gpg-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>${fastjson.version}</version>
		</dependency>
	</dependencies>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://choosealicense.com/licenses/mit/</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/netease-im/camellia</url>
		<connection>https://github.com/netease-im/camellia.git</connection>
		<developerConnection>https://github.com/caojiajun</developerConnection>
	</scm>

	<developers>
		<developer>
			<name>caojiajun</name>
			<email>zj_caojiajun@163.com</email>
			<url>https://github.com/caojiajun</url>
		</developer>
	</developers>

	<repositories>
		<repository>
			<id>repo1.maven.org</id>
			<url>https://repo1.maven.org/maven2</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>

	</repositories>



</project>
